--- a/fashion.html
+++ b/fashion.html
@@ -11,8 +11,8 @@
            <nav class="navigation grid header__navigation">
                <a href="./index.html" class="navigation__logo"><img class="navigation__image" src="images/logo.svg" alt="Логотип"></a>
                <ul class="navigation__list">
-                   <li class="navigation__item"><a href="./index.html" class="navigation__link navigation__link--active">главная</a></li>
-                   <li class="navigation__item"><a href="./fashion.html" class="navigation__link">мода</a></li>
+                   <li class="navigation__item"><a href="./index.html" class="navigation__link">главная</a></li>
+                   <li class="navigation__item"><a href="./fashion.html" class="navigation__link navigation__link--active">мода</a></li>
                    <li class="navigation__item"><a href="./tech.html" class="navigation__link">технологии</a></li>
                    <li class="navigation__item"><a href="./trips.html" class="navigation__link">путешествия</a></li>
                    <li class="navigation__item"><a href="./sport.html" class="navigation__link">спорт</a></li>
@@ -141,8 +141,8 @@
         <nav class="navigation grid footer__navigation">
             <a href="#" class="navigation__logo"><img class="navigation__image" src="images/logo.svg" alt="Логотип"></a>
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="./index.html" class="navigation__link navigation__link--active">главная</a></li>
-                <li class="navigation__item"><a href="./fashion.html" class="navigation__link">мода</a></li>
+                <li class="navigation__item"><a href="./index.html" class="navigation__link">главная</a></li>
+                <li class="navigation__item"><a href="./fashion.html" class="navigation__link navigation__link--active">мода</a></li>
                 <li class="navigation__item"><a href="./tech.html" class="navigation__link">технологии</a></li>
                 <li class="navigation__item"><a href="./trips.html" class="navigation__link">путешествия</a></li>
                 <li class="navigation__item"><a href="./sport.html" class="navigation__link">спорт</a></li>
