--- a/index.html
+++ b/index.html
@@ -21,121 +21,13 @@
        </div>
     </header>
     <main class="main">
-        <sectionn class="articles">
+        <section class="articles">
             <div class="container grid">
-                <section class="articles__big-column">
-                    <article class="main-article">
-                        <div class="main-article__image--container">
-                            <img src="./images/image3.jpg" alt="Фото новости" class="main-article__image">
-                        </div>
-                        <div class="main-article__content">
-                            <span class="article-category main-article__category">Технологии</span>
-                            <h2 class="main-article__title">Вещи, которые нужно знать перед стажировкой в IT сфере</h2>
-                            <p class="main-article__text">Уличные музыканты продолжают радовать фанатов стрит арта. Для этого они используют привычные мелодии в новом формате.</p>
-                            <span class="article-source main-article__source">Источник</span>
-                        </div>
-                    </article>
+                <section class="articles__big-column"></section>
 
-                    <article class="main-article">
-                        <div class="main-article__image--container">
-                            <img src="images/image2.jpg" alt="Фото новости" class="main-article__image">
-                        </div>
-                        <div class="main-article__content">
-                            <span class="article-category main-article__category">Технологии</span>
-                            <h2 class="main-article__title">Как форма ваших ушей влияет на то, что вы слышите</h2>
-                            <p class="main-article__text">Технологические тренды меняют наш привычный мир. Глобальные корпорации задают новые тренды айтишникам на разработку, а дизайнеров заставляют </p>
-                            <span class="article-source main-article__source">Источник</span>
-                        </div>
-                    </article>
-
-                    <article class="main-article">
-                        <div class="main-article__image--container">
-                            <img src="./images/image.jpg" alt="Фото новости" class="main-article__image">
-                        </div>
-                        <div class="main-article__content">
-                            <span class="article-category main-article__category">Технологии</span>
-                            <h2 class="main-article__title">Отец жанра. Как уже забытый трип-хоп определяет самую популярную</h2>
-                            <p class="main-article__text">Новая мода на топовые наряды необычных цветов. В сезоне - топики, шорты-боксеры, сланцы и сандалии. А также большие солнечные очки и яркая шляпка.</p>
-                            <span class="article-source main-article__source">Источник</span>
-                        </div>
-                    </article>
-                </section>
-
-                <section class="articles__small-column">
-                    <article class="small-article">
-                        <h2 class="small-article__title">В американском зоопарке празднуют рождение гориллы: видео</h2>
-                            <p class="small-article__caption">
-                                <span class="article-date small-article__date">12 сентября</span>
-                                <span class="article-source small-article__source">Источник</span>
-                            </p>
-                    </article>
-
-                    <article class="small-article">
-                        <h2 class="small-article__title">Новую популяцию синих китов обнаружили в Индийском океане</h2>
-                        <p class="small-article__caption">
-                            <span class="article-date small-article__date">11 сентября</span>
-                            <span class="article-source small-article__source">Источник</span>
-                        </p>
-                    </article>
-
-                    <article class="small-article">
-                        <h2 class="small-article__title">Леса защищают климат. Будущее с большим количеством штормов будет означать проблемы.</h2>
-                        <p class="small-article__caption">
-                            <span class="article-date small-article__date">10 сентября</span>
-                            <span class="article-source small-article__source">Источник</span>
-                        </p>
-                    </article>
-
-                    <article class="small-article">
-                        <h2 class="small-article__title">Благотворительный забег с собаками: чем заняться на выходных в Москве</h2>
-                        <p class="small-article__caption">
-                            <span class="article-date small-article__date">10 сентября</span>
-                            <span class="article-source small-article__source">Источник</span>
-                        </p>
-                    </article>
-
-                    <article class="small-article">
-                        <h2 class="small-article__title">Как начать год так, чтобы потом было приятно подводить итоги: чек-лист</h2>
-                        <p class="small-article__caption">
-                            <span class="article-date small-article__date">9 сентября</span>
-                            <span class="article-source small-article__source">Источник</span>
-                        </p>
-                    </article>
-
-                    <article class="small-article">
-                        <h2 class="small-article__title">Как подготовиться к Новому году, все успеть и не нервничать</h2>
-                        <p class="small-article__caption">
-                            <span class="article-date small-article__date">12 сентября</span>
-                            <span class="article-source small-article__source">Источник</span>
-                        </p>
-                    </article>
-
-                    <article class="small-article">
-                        <h2 class="small-article__title">Как выбирать и дарить подарки - новогодние и не только: чек-лист Esquire</h2>
-                        <p class="small-article__caption">
-                            <span class="article-date small-article__date">11 сентября</span>
-                            <span class="article-source small-article__source">Источник</span>
-                        </p>
-                    </article>
-
-                    <article class="small-article">
-                        <h2 class="small-article__title">Мужчина из Франции завещал часть своего наследства котам из Эрмитажа</h2>
-                        <p class="small-article__caption">
-                            <span class="article-date small-article__date">13 сентября</span>
-                            <span class="article-source small-article__source">Источник</span>
-                        </p>
-                    </article>
-
-                    <article class="small-article">
-                        <h2 class="small-article__title">Новый институт современного искусства отражается в историческом ландшафте Ричмонда.</h2>
-                        <p class="small-article__caption">
-                            <span class="article-date small-article__date">14 сентября</span>
-                            <span class="article-source small-article__source">Источник</span>
-                        </p>
-                    </article>
-                </section>
+                <section class="articles__small-column"></section>
             </div>
-        </sectionn>
+        </section>
     </main>
     <footer class="footer">
         <nav class="navigation grid footer__navigation">
@@ -154,6 +46,31 @@
             <p class="footer__copyright">© 2023</p>
         </div>
     </footer>
+
+    <template id="main-news-item">
+        <article class="main-article">
+            <div class="main-article__image--container">
+                <img src="./images/image3.jpg" alt="Фото новости" class="main-article__image">
+            </div>
+            <div class="main-article__content">
+                <span class="article-category main-article__category">Технологии</span>
+                <h2 class="main-article__title">Вещи, которые нужно знать перед стажировкой в IT сфере</h2>
+                <p class="main-article__text">Уличные музыканты продолжают радовать фанатов стрит арта. Для этого они используют привычные мелодии в новом формате.</p>
+                <span class="article-source main-article__source">Источник</span>
+            </div>
+        </article>
+    </template>
+
+    <template id="small-article-item">
+        <article class="small-article">
+            <h2 class="small-article__title">В американском зоопарке празднуют рождение гориллы: видео</h2>
+            <p class="small-article__caption">
+                <span class="article-date small-article__date">12 сентября</span>
+                <span class="article-source small-article__source">Источник</span>
+            </p>
+        </article>
+    </template>
+
     <script src="./script.js"></script>
 </body>
 </html>
