--- a/index.html
+++ b/index.html
@@ -3,50 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>KC News</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="header">
-       <div class="container">
-           <nav class="navigation grid header__navigation">
-               <a href="./index.html" class="navigation__logo"><img class="navigation__image" src="images/logo.svg" alt="Логотип"></a>
-               <ul class="navigation__list">
-                   <li class="navigation__item"><a href="./index.html" class="navigation__link navigation__link--active">главная</a></li>
-                   <li class="navigation__item"><a href="./fashion.html" class="navigation__link">мода</a></li>
-                   <li class="navigation__item"><a href="./tech.html" class="navigation__link">технологии</a></li>
-                   <li class="navigation__item"><a href="./trips.html" class="navigation__link">путешествия</a></li>
-                   <li class="navigation__item"><a href="./sport.html" class="navigation__link">спорт</a></li>
-               </ul>
-           </nav>
-       </div>
-    </header>
-    <main class="main">
-        <section class="articles">
-            <div class="container grid">
-                <section class="articles__big-column"></section>
-
-                <section class="articles__small-column"></section>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
-        <nav class="navigation grid footer__navigation">
-            <a href="#" class="navigation__logo"><img class="navigation__image" src="images/logo.svg" alt="Логотип"></a>
-            <ul class="navigation__list">
-                <li class="navigation__item"><a href="./index.html" class="navigation__link navigation__link--active">главная</a></li>
-                <li class="navigation__item"><a href="./fashion.html" class="navigation__link">мода</a></li>
-                <li class="navigation__item"><a href="./tech.html" class="navigation__link">технологии</a></li>
-                <li class="navigation__item"><a href="./trips.html" class="navigation__link">путешествия</a></li>
-                <li class="navigation__item"><a href="./sport.html" class="navigation__link">спорт</a></li>
-            </ul>
-        </nav>
-
-        <div class="footer__column">
-            <p class="footer__text">Сделано <a class="footer__link" href="https://github.com/JuliaLog?tab=overview&from=2023-11-01&to=2023-11-19" target="_blank">Julia_Log</a></p>
-            <p class="footer__copyright">© 2023</p>
-        </div>
-    </footer>
-
-    <script src="./script.js"></script>
+    <div id="root"></div>
+    <script src="./dist/main.js"></script>
 </body>
 </html>
